iptables/ip6tables.rules
*filter

# Allow all loopback traffic.
# Reject traffic to localhost that does not originate from lo0.
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -s ::1/128 -j REJECT

# Allow ping.
-A INPUT -p icmpv6 -j ACCEPT

# Allow HTTP and HTTPS.
-A INPUT -p tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -p tcp --dport 443 -m state --state NEW -j ACCEPT

# UniFi device adoption.
-A INPUT -p tcp --dport 7442 -m state --state NEW -j ACCEPT
-A INPUT -p tcp --dport 7444 -m state --state NEW -j ACCEPT
-A INPUT -p tcp --dport 7550 -m state --state NEW -j ACCEPT
-A INPUT -p udp --dport 10001 -j ACCEPT

# Allow inbound traffic from established connections.
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Log what was incoming but denied.
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "ip6tables_INPUT_denied: " --log-level 7

# Reject all other inbound.
-A INPUT -j REJECT

# Log any traffic that was sent to you for forwarding.
-A FORWARD -m limit --limit 5/min -j LOG --log-prefix "ip6tables_FORWARD_denied: " --log-level 7

# Reject all traffic forwarding.
-A FORWARD -j REJECT

COMMIT
